fixed text wrapping on all browsers

--- a/style.css
+++ b/style.css
@@ -13,6 +13,8 @@ body {
   color: #333333;
   font-family: monospace;
   font-size: 8px;
+  word-break: break-all;
+  white-space: normal;
   overflow: clip;
 }
 
